# SNU-Connectome-Fellows-Program

./: .gitignore  DEPLOYMENT.md  README.md  deploy.sh  pyproject.toml
configs/: settings.yaml
docs/: ADMINISTRATIVE_PLAN.md  BUDGET_ANALYSIS.md  CURRICULUM.md  DEPLOYMENT_INFRASTRUCTURE.md  IMPLEMENTATION_PLAN.md  MENTOR_NETWORK.md  README.md  SCIENTIFIC_RESEARCH_PLAN.md  SYSTEM_ARCHITECTURE.md  TECHNICAL_SPECIFICATIONS.md  WEBSITE_RESEARCH_REPORT.md
scripts/: backup.sh  setup_tmux.sh
src/: __init__.py
src/ai/: __init__.py
src/ai/llm/: __init__.py  client.py  extended_thinking.py  model_router.py
src/core/: __init__.py
src/core/fellow/: __init__.py  manager.py  models.py
src/core/mentor/: __init__.py  matcher.py  models.py
src/research/: __init__.py
src/research/brainlm/: __init__.py  config.py  model.py
src/research/jepa/: __init__.py  config.py  model.py
src/web/: __init__.py
src/web/dashboard/: __init__.py  app.py
templates/: APPLICATION_FORM.md
website/: .env.example  .env.production  .env.test  .vercel-env  Dockerfile  README.md  docker-compose.yml  jest.config.js  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vercel.json
website/.github/workflows/: deploy.yml
website/.next/: trace
website/.next/server/: edge-runtime-webpack.js  middleware-manifest.json  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json  webpack-runtime.js
website/.next/server/app/: page.js  page_client-reference-manifest.js
website/.next/server/src/: middleware.js
website/.next/server/vendor-chunks/: @babel.js  @headlessui.js  @heroicons.js  @swc.js  clsx.js  framer-motion.js  goober.js  match-sorter.js  next-auth.js  next.js  react-hot-toast.js  react-query.js  remove-accents.js  web-vitals.js
website/.next/static/chunks/: app-pages-internals.js  webpack.js
website/.next/types/app/: layout.ts  page.ts
website/e2e/: basic-test.spec.ts  global-setup.ts  homepage.spec.ts
website/playwright-report/: index.html
website/public/: sw.js
website/src/: middleware.ts
website/src/app/: globals.css  layout.tsx  page.tsx
website/src/app/admin/: layout.tsx  page.tsx
website/src/app/apply/: page.tsx
website/src/app/mentors/: page.tsx
website/src/app/mentorship/: page.tsx
website/src/app/offline/: page.tsx
website/src/app/research/: page.tsx
website/src/components/: providers.tsx
website/src/components/admin/: AdminHeader.tsx  AdminSidebar.tsx  BudgetOverview.tsx  DashboardStats.tsx  FellowProgress.tsx  QuickActions.tsx  RecentApplications.tsx  ResearchMetrics.tsx
website/src/components/forms/: ApplicationForm.tsx  ApplicationFormSimple.tsx
website/src/components/layout/: Footer.tsx  Header.tsx
website/src/components/sections/: ApplicationGuide.tsx  (+8 more)
website/src/hooks/: useAccessibility.ts
website/src/test/: README.md  jest.setup.js  test-utils.tsx
website/src/types/: index.ts  next-auth.d.ts
website/test-results/: .last-run.json
(+17 files in other folders)
