[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "connectome-fellows"
version = "1.0.0"
description = "SNU Connectome Fellows Program - Neuroscience Foundation Models Research"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Connectome Lab", email = "connectome@snu.ac.kr"}
]
keywords = [
    "neuroscience",
    "foundation-models",
    "brain-imaging",
    "deep-learning",
    "fMRI",
    "EEG",
    "BrainLM",
    "Brain-JEPA"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    # Core ML
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "lightning>=2.2.0",
    "transformers>=4.40.0",
    "einops>=0.7.0",
    
    # Neuroscience
    "nilearn>=0.10.3",
    "nibabel>=5.2.0",
    "mne>=1.6.0",
    
    # AI APIs
    "anthropic>=0.25.0",
    "openai>=1.20.0",
    "google-generativeai>=0.5.0",
    
    # Data & Utils
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scipy>=1.12.0",
    "scikit-learn>=1.4.0",
    "h5py>=3.10.0",
    
    # Web & API
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "streamlit>=1.32.0",
    "pydantic>=2.6.0",
    
    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    
    # Visualization
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.20.0",
    
    # Utils
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "loguru>=0.7.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "pre-commit>=3.6.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.scripts]
fellows = "src.cli:app"

[project.urls]
Homepage = "https://github.com/snuconnectome/SNU-Connectome-Fellows-Program"
Documentation = "https://connectome.snu.ac.kr/fellows/docs"
Repository = "https://github.com/snuconnectome/SNU-Connectome-Fellows-Program"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"




